@@ -1,7 +1,6 @@
 #!/bin/sh
 
-java --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
-  -javaagent:/root/aeron/aeron-agent-1.34.0.jar \
+java -javaagent:/root/aeron/aeron-agent-1.34.0.jar \
   -Djava.net.preferIPv4Stack=true \
   -Daeron.event.log=admin \
   -jar /root/jar/aeron-mdc-publisher-0.1-SNAPSHOT-all.jar
