@@ -1,7 +1,6 @@
 #!/bin/sh
 
-java --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
-  -javaagent:/root/aeron/aeron-agent-1.39.0.jar \
+java -javaagent:/root/aeron/aeron-agent-1.39.0.jar \
   -Djava.net.preferIPv4Stack=true \
   -Daeron.event.log=admin \
   -Daeron.event.archive.log=all \
